# joyofcoding.org

./: .gitignore  Makefile  README.md  about-us.html  call-for-sessions.html  code-of-conduct.html  config.toml  index.html  joyofcoding.css  joyofcoding.js  jquery.modal.css  jquery.modal.js  main.scss  package-lock.json  package.json  schedule.html  speaker-faq.html  underscore-min.map  update-old-site-links.sh  venue.html
2013/: index.html
2014/: index.html
2015/: joyofcoding.css
2016/: about-us.html  callforsessions.html  codeofconduct.html  index.html  schedule.html
2017-tmp1/: index.html
callforsessions/: index.html
cfs/: index.html
css/: about-us.css  code-of-conduct.css  heydings_icons-webfont.eot  home.css  schedule.css  style-min.css  style.css  venue.css
docs/: 2017-tmp1  2017-tmp2  2017-tmp3  2018.html  404.html  CNAME  about.html  alexander.html  andrea_goulet.html  avanti_sharma.html  bert_hubert.html  coen_goedegebure.html  contact.html  daniel_stenberg.html  dawn_ahukanna.html  demoscene.html  gallery.html  hannes_muhleisen.html  index.html  index.xml  intro-slide.html  kevlin_henney.html  lightning-talks.html  lightning_talks.html  lordspreadpointamiga.html  michael_pound.html  mscott_ford.html  paco_van_beckhoven.html  photos.html  practical.html  sara_vieira.html  schedule.html  shirley_tarboton.html  siegfried_karcher.html  sitemap.xml  speakers.html  sponsoring.html  venue.html  yulia_startsev.html
scripts/: README.md  Speaker Info - Session Info.csv  csv-to-html-pages.hs  scripts.cabal  speaker-page-template.hamlet  stack.yaml
(+399 files in other folders)
