name:                scripts
version:             0.1.0.0
synopsis:            Scripts for managing the JoC website
description:         Please see README.md
homepage:            http://github.com/joyofcoding.io
license:             BSD3
license-file:        LICENSE
author:              Cies Breijs
maintainer:          cies-AT@kde-DOT.nl
copyright:           2016 Cies Breijs
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sync-list-from-table
  main-is:             sync-list-from-table.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hxt
                     , regexpr
                     , HandsomeSoup
